--- a/Almostengr.DogFeeder.Api/Almostengr.DogFeeder.Api.csproj
+++ b/Almostengr.DogFeeder.Api/Almostengr.DogFeeder.Api.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.15"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22"/>
   </ItemGroup>
 </Project>
