--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,33 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (api)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/Almostengr.DogFeeder.Api/bin/Debug/netcoreapp3.1/Almostengr.DogFeeder.Api.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Almostengr.DogFeeder.Api",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Almostengr.DogFeeder.Web/bin/Debug/netcoreapp3.1/Almostengr.DogFeeder.Web.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Almostengr.DogFeeder.Web",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
