--- a/Almostengr.DogFeeder.Api/Almostengr.DogFeeder.Api.csproj
+++ b/Almostengr.DogFeeder.Api/Almostengr.DogFeeder.Api.csproj
@@ -6,5 +6,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.15"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.15"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="3.1.15"/>
   </ItemGroup>
 </Project>
