--- a/Almostengr.DogFeeder.Web/Almostengr.DogFeeder.Web.csproj
+++ b/Almostengr.DogFeeder.Web/Almostengr.DogFeeder.Web.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="3.1.15"/>
   </ItemGroup>
 </Project>
