--- a/Almostengr.PetFeeder.Api/Almostengr.PetFeeder.Api.csproj
+++ b/Almostengr.PetFeeder.Api/Almostengr.PetFeeder.Api.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.15"/>
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="3.1.15"/>
+    <PackageReference Include="System.Device.Gpio" Version="1.4.0"/>
   </ItemGroup>
 </Project>
