#1 Removed dead code, update repository methods and workers

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,8 @@
                 "add",
                 "-p",
                 "Almostengr.PetFeeder.Api/",
+                "-o",
+                "${workspaceFolder}/Almostengr.PetFeeder.Api/Migrations",
                 "'$(date)'",
             ],
             "group": "build",
