--- a/Almostengr.PetFeeder.Web/Almostengr.PetFeeder.Web.csproj
+++ b/Almostengr.PetFeeder.Web/Almostengr.PetFeeder.Web.csproj
@@ -1,6 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Company>Robinson Handy and Technology Services LLC</Company>
+    <Authors>Kenny Robinson</Authors>
+    <AssemblyName>Almostengr.PetFeeder.Api</AssemblyName>
+    <RootNamespace>Almostengr.PetFeeder.Api</RootNamespace>
+    <VersionSuffix>$([System.DateTime]::UtcNow.ToString(yyyy.MM.dd.hhmm))</VersionSuffix>
+    <AssemblyVersion Condition=" '$(VersionSuffix)' == '' ">0.0.0.1</AssemblyVersion>
+    <AssemblyVersion Condition=" '$(VersionSuffix)' != '' ">$(VersionSuffix)</AssemblyVersion>
+    <Version Condition=" '$(VersionSuffix)' == '' ">0.0.1.0</Version>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionSuffix)</Version>
+    <Copyright>Copyright © Robinson Handy and Technology Services</Copyright>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
