--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,6 +45,26 @@
             }
         },
         {
+            "name": ".NET Core Launch (worker)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Almostengr.PetFeeder.Worker/bin/Debug/netcoreapp3.1/Almostengr.PetFeeder.Worker.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Almostengr.PetFeeder.Worker",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach",
