--- a/Almostengr.PetFeeder.Api/Almostengr.PetFeeder.Api.csproj
+++ b/Almostengr.PetFeeder.Api/Almostengr.PetFeeder.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.15"/>
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="3.1.15"/>
-    <PackageReference Include="System.Device.Gpio" Version="1.4.0"/>
+    <PackageReference Include="System.Device.Gpio" Version="1.5.0"/>
+    <ProjectReference Include="..\Almostengr.PetFeeder.Common\Almostengr.PetFeeder.Common.csproj" />
   </ItemGroup>
 </Project>
