--- a/Almostengr.PetFeeder.BackEnd/Almostengr.PetFeeder.BackEnd.csproj
+++ b/Almostengr.PetFeeder.BackEnd/Almostengr.PetFeeder.BackEnd.csproj
@@ -3,11 +3,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="System.Device.Gpio" Version="1.5.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+    <PackageReference Include="System.Device.Gpio" Version="1.5.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Almostengr.PetFeeder.Common\Almostengr.PetFeeder.Common.csproj" />
+    <ProjectReference Include="..\Almostengr.PetFeeder.Common\Almostengr.PetFeeder.Common.csproj"/>
   </ItemGroup>
 </Project>
