--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,11 +32,11 @@
                 "migrations",
                 "add",
                 "-p",
-                "Almostengr.PetFeeder.Web/",
+                "Almostengr.PetFeeder.BackEnd/",
                 "--context",
                 "PetFeederDbContext",
                 "-o",
-                "${workspaceFolder}/Almostengr.PetFeeder.Web/Migrations",
+                "${workspaceFolder}/Almostengr.PetFeeder.BackEnd/Migrations",
                 "${input:migrationName}"
             ],
             "group": "none",
@@ -54,7 +54,7 @@
                 "database",
                 "update",
                 "-p",
-                "Almostengr.PetFeeder.Web/",
+                "Almostengr.PetFeeder.BackEnd/",
                 "--context",
                 "PetFeederDbContext",
             ],
@@ -74,7 +74,7 @@
                 "remove",
                 "${input:migrationName}",
                 "-p",
-                "Almostengr.PetFeeder.Web/",
+                "Almostengr.PetFeeder.BackEnd/",
                 "--context",
                 "PetFeederDbContext",
             ],
@@ -91,7 +91,7 @@
             "args": [
                 "watch",
                 "-p",
-                "Almostengr.PetFeeder.Web/",
+                "Almostengr.PetFeeder.BackEnd/",
                 "run"
             ],
             "group": "none",
