--- a/Almostengr.PetFeeder.BackEnd/Almostengr.PetFeeder.BackEnd.csproj
+++ b/Almostengr.PetFeeder.BackEnd/Almostengr.PetFeeder.BackEnd.csproj
@@ -1,6 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Company>Robinson Handy and Technology Services LLC</Company>
+    <Copyright>Copyright © $([System.DateTime]::UtcNow.ToString(yyyy)) Robinson Handy and Technology Services</Copyright>
+    <Product>Pet Feeder</Product>
+    <Authors>Kenny Robinson</Authors>
+    <AssemblyName>Almostengr.PetFeeder.BackEnd</AssemblyName>
+    <RootNamespace>Almostengr.PetFeeder</RootNamespace>
+    <Version>$([System.DateTime]::UtcNow.ToString(yyyy.MM))</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
