--- a/Almostengr.PetFeeder.FrontEnd/Almostengr.PetFeeder.FrontEnd.csproj
+++ b/Almostengr.PetFeeder.FrontEnd/Almostengr.PetFeeder.FrontEnd.csproj
@@ -7,5 +7,12 @@
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Company>Robinson Handy and Technology Services LLC</Company>
+    <Copyright>Copyright © $([System.DateTime]::UtcNow.ToString(yyyy)) Robinson Handy and Technology Services</Copyright>
+    <Product>Pet Feeder</Product>
+    <Authors>Kenny Robinson</Authors>
+    <AssemblyName>Almostengr.PetFeeder.FrontEnd</AssemblyName>
+    <RootNamespace>Almostengr.PetFeeder</RootNamespace>
+    <Version>$([System.DateTime]::UtcNow.ToString(yyyy.MM))</Version>
   </PropertyGroup>
 </Project>
