Added task for tagging release

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -100,6 +100,19 @@
             },
             "problemMatcher": "$msCompile",
         },
+        {
+            "label": "Tag Release",
+            "command" : "git",
+            "type": "shell",
+            "args": [
+                "tag",
+                "-a",
+                "\"v$(date +%Y.%m.%d)\"",
+                "-m",
+                "\"version $(date +%Y.%m.%d)\""
+            ],
+            "dependsOn": ["Publish release"],
+        },
     ],
     "inputs": [
         {
